[project]
name = "socceranalyticshub"
version = "0.1.0"
description = ""
authors = [
    {name = "C0deByCata"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "soccerdata (>=1.8.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
